# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.26.0
	Артём Воротников <vorot93 at yandex.ru>:
	- Continued Russian translation and add fixes suggested by
	  Stanislav Cymbalov <dummyunit at gmail.com>.

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add masked-packages
	- Introduce versionsort -[npvr]
	- Introduce plainversion and revision attributes
	- Introduce --pipe-name and --pipe-version
	- Support for subslots
	- Do not use C++ exceptions. This is a major internal change.
	- Improve error handling of version parsing
	- Remove NEWLINE
	- Extend varsreader.cc to allow VAR=\n and (for portage escapes)
	  VAR[\t ]*=[\t ]*value http://bugs.gentoo.org/show_bug.cgi?id=417387
	- support --with-nongnu-cxx=clang++
	- separate eix-drop-permissions binary with --enable-separate-tools
	- Improve slot finding
	- Do not cache version strings to save memory

*eix-0.25.5
	Артём Воротников <vorot93 at yandex.ru>:
	- Russian translation. (Missing yet: eix --dump and most of manpage)

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Depend on http://github.com/vaeth/push/ instead of implementing
	  a poor substitute.
	- Add German manpage
	- Improve file error handling. Make some errors fatal.
	- scripts: More compatible usage of cd/mkdir, speed up tests for -z/-n
	- eix-functions.sh: Make eval_gettext safe
	- Use waitpid() in a more compatible manner
	- No longer support gnu++0x or c++0x which breaks with gcc-4.4, see
	  http://bugs.gentoo.org/show_bug.cgi?id=414979

*eix-0.25.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce -y (--any) to select any match field: don't miss anything.
	- Default format: new properties/restrictions separator: */^
	  Also add $sep (a tab) after version with --versionlines
	  Remove duplicate FORMAT_AFTER_IUSE (a long standing regression)
	- Fix eix-installed-after (regression introduced in eix-0.24.0)
	- Set umask 002 in eix-update unless option -o is used, see