@@ -3,7 +3,8 @@ _arguments -s -S -A '-*' : \
 '(1 -)'{'-h','-\\?'}'[help]' \
 '-c[use CHECK_INSTALLED_OVERLAYS=true]' \
 '-C[use CHECK_INSTALLED_OVERLAYS=repository]' \
-'(1 -b)-d[instead of argument "detail"]' \
-'(1 -d)-b[instead of argument "brief"]' \
+'(1 -b -q)-d[instead of argument "detail"]' \
+'(1 -d -q)-b[instead of argument "brief"]' \
+'(1 -d -b)-q[instead of argument "quick"]' \
 '-H[no status line update]' \
-'1:mode:(detail brief)'
+'1:mode:(detail brief quick)'
