@@ -1,5 +1,10 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.26.1
+	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- eix-test-obsolete: Add -q, "quick", use FORMAT_TEST_OBSOLETE,
+	  support TEST_FOR_REDUNDANCY better.
+
 *eix-0.26.0
 	Артём Воротников <vorot93 at yandex.ru>:
 	- Continued Russian translation and add fixes suggested by
